@@ -1,3 +1,8 @@
+2006-05-23  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-ppc.c (compare_symbols): Prefer strong dynamic global
+	function syms over other syms.
+
 2006-05-22  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* elflink.c (_bfd_elf_add_dynamic_entry): Remove DT_TEXTREL
